fix: payment type align to the top

--- a/packages/esm-billing-app/src/billable-services/payment-history/payment-history.scss
+++ b/packages/esm-billing-app/src/billable-services/payment-history/payment-history.scss
@@ -41,7 +41,7 @@
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: layout.$spacing-05;
-  margin-top: layout.$spacing-05;
+  margin-bottom: layout.$spacing-05;
 }
 
 .paymentTotal {
